initial page and search bar

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,24 @@
-<html>
+<!DOCTYPE html>
+<html lang ="en">
+
 <head>
+    <title>Project Sadness</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.2/material.indigo-pink.min.css">
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <script defer src="https://code.getmdl.io/1.1.2/material.min.js"></script>
 </head>
-<body>
-  Hello World!
-</body>
+
+<header>
+<div class="box">
+    <div class="container-1">
+            <span class="icon"><i class="fa fa-search"></i></span>
+            <input type="search" id="search" placeholder="Search for Twitter user..." />
+        </div>
+    </div>
+</header>
+
 </html>
