I host my own shit. I'm a strong independent black women who don't need no cdns

--- a/public/choose.html
+++ b/public/choose.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-  <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.17.1/URI.min.js"></script>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/urijs/src/URI.min.js"></script>
 </head>
 <body>
 <div id="image-rects-container" style="position:relative;">
