--- a/public/highcharts.html
+++ b/public/highcharts.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="https://code.jquery.com/jquery-git2.min.js"></script>
-        <script src="http://code.highcharts.com/highcharts.js"></script>
+        <script src="node_modules/highcharts/highcharts.js"></script>
         <script src="highcharts-unica-theme.js"></script>
     </head>
     <body>
