--- a/public/show.html
+++ b/public/show.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
-    <script src="http://code.highcharts.com/highcharts.js"></script>
+    <script src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="node_modules/highcharts/highcharts.js"></script>
     <script src="highcharts-unica-theme.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.17.1/URI.min.js"></script>
-    <script src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script src="node_modules/urijs/src/URI.min.js"></script>
+    <script src="node_modules/highcharts/modules/exporting.js"></script>
   </head>
   <body>
     <div id="container" style="width:100%; height:400px;"></div>
