--- a/public/choose.html
+++ b/public/choose.html
@@ -39,13 +39,14 @@
         </div>
         <span>
             <div class="mdl-grid clickme">
-                <div class="mdl-cell mdl-cell--1">
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="width:10vm;">
+                <div class="mdl-cell mdl-cell--2-col mdl-cell--4-offset-desktop">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                         That's not right
                     </button>
                 </div>
-                <div class="mdl-cell mdl-cell--1">
-                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="width:10vm;">
+                <div class="mdl-cell mdl-cell--1-col"></div>
+                <div class="mdl-cell mdl-cell--2-col">
+                    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                         Continue
                     </button>
                 </div>
