--- a/public/highcharts.html
+++ b/public/highcharts.html
@@ -21,44 +21,47 @@
         yAxis: {
             title: {
                 text: 'sadness'
-            }
+            },
+            min: 0, max: 1
         },
         series: [{
             type: 'area',
             name: 'sadness',
-            data: [[Date.UTC(2013,5,2),0.7695],
-[Date.UTC(2013,5,3),0.7648],
-[Date.UTC(2013,5,4),0.7645],
-[Date.UTC(2013,5,5),0.7638],
-[Date.UTC(2013,5,6),0.7549],
-[Date.UTC(2013,5,7),0.7562],
-[Date.UTC(2013,5,9),0.7574],
-[Date.UTC(2013,5,10),0.7543],
-[Date.UTC(2013,5,11),0.7510],
-[Date.UTC(2013,5,12),0.7498],
-[Date.UTC(2013,5,13),0.7477],
-[Date.UTC(2013,5,14),0.7492],
-[Date.UTC(2013,5,16),0.7487],
-[Date.UTC(2013,5,17),0.7480],
-[Date.UTC(2013,5,18),0.7466],
-[Date.UTC(2013,5,19),0.7521],
-[Date.UTC(2013,5,20),0.7564],
-[Date.UTC(2013,5,21),0.7621],
-[Date.UTC(2013,5,23),0.7630],
-[Date.UTC(2013,5,24),0.7623],
-[Date.UTC(2013,5,25),0.7644],
-[Date.UTC(2013,5,26),0.7685],
-[Date.UTC(2013,5,27),0.7671],
-[Date.UTC(2013,5,28),0.7687],
-[Date.UTC(2013,5,30),0.7687],
-[Date.UTC(2013,6,1),0.7654],
-[Date.UTC(2013,6,2),0.7705],
-[Date.UTC(2013,6,3),0.7687],
-[Date.UTC(2013,6,4),0.7744],
-[Date.UTC(2013,6,5),0.7793],
-[Date.UTC(2013,6,7),0.7804],
-[Date.UTC(2013,6,8),0.7770],
-[Date.UTC(2013,6,9),0.7824]]
+            data: [[Date.UTC(2013,5,2),0.2],
+            [Date.UTC(2013,5,3),0.3]]
+//             [[Date.UTC(2013,5,2),0.7695],
+// [Date.UTC(2013,5,3),0.7648],
+// [Date.UTC(2013,5,4),0.7645],
+// [Date.UTC(2013,5,5),0.7638],
+// [Date.UTC(2013,5,6),0.7549],
+// [Date.UTC(2013,5,7),0.7562],
+// [Date.UTC(2013,5,9),0.7574],
+// [Date.UTC(2013,5,10),0.7543],
+// [Date.UTC(2013,5,11),0.7510],
+// [Date.UTC(2013,5,12),0.7498],
+// [Date.UTC(2013,5,13),0.7477],
+// [Date.UTC(2013,5,14),0.7492],
+// [Date.UTC(2013,5,16),0.7487],
+// [Date.UTC(2013,5,17),0.7480],
+// [Date.UTC(2013,5,18),0.7466],
+// [Date.UTC(2013,5,19),0.7521],
+// [Date.UTC(2013,5,20),0.7564],
+// [Date.UTC(2013,5,21),0.7621],
+// [Date.UTC(2013,5,23),0.7630],
+// [Date.UTC(2013,5,24),0.7623],
+// [Date.UTC(2013,5,25),0.7644],
+// [Date.UTC(2013,5,26),0.7685],
+// [Date.UTC(2013,5,27),0.7671],
+// [Date.UTC(2013,5,28),0.7687],
+// [Date.UTC(2013,5,30),0.7687],
+// [Date.UTC(2013,6,1),0.7654],
+// [Date.UTC(2013,6,2),0.7705],
+// [Date.UTC(2013,6,3),0.7687],
+// [Date.UTC(2013,6,4),0.7744],
+// [Date.UTC(2013,6,5),0.7793],
+// [Date.UTC(2013,6,7),0.7804],
+// [Date.UTC(2013,6,8),0.7770],
+// [Date.UTC(2013,6,9),0.7824]]
         }]
     });
 });
