--- a/public/choose.html
+++ b/public/choose.html
@@ -3,6 +3,7 @@
     <title>Project Sadness</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.2/material.amber-orange.min.css" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
@@ -14,11 +15,15 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500' rel='stylesheet' type='text/css'>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/URI.js/1.17.1/URI.min.js"></script>
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+   <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js"></script>
+
   <script src="node_modules/urijs/src/URI.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+
 </head>
 
 <body>
+<div class="se-pre-con"></div>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header" >
     <header class="mdl-layout__header" id="sticky_header">
         <div class="mdl-cell mdl-cell--12-col header" id="face-copy"></div>
