Adds score decisions to show.js

--- a/public/show.html
+++ b/public/show.html
@@ -38,7 +38,7 @@
                   </div>
               </div>
               <!-- 4/4 -->
-              <div class="mdl-cell mdl-cell--6-col">
+              <div id="4_panel" class="mdl-cell mdl-cell--6-col score_panel">
                   <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
                       <div class="mdl-card__title">
                           <h2 class="mdl-card__title-text">Your ranking:</h2>
@@ -49,9 +49,8 @@
                       </div>
                   </div>
               </div>
-          </div>
           <!-- 3/4 -->
-              <div class="mdl-cell mdl-cell--6-col">
+              <div id="3_panel" class="mdl-cell mdl-cell--6-col score_panel">
                   <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
                       <div class="mdl-card__title">
                           <h2 class="mdl-card__title-text">Your ranking:</h2>
@@ -69,7 +68,7 @@
                   </div>
               </div>
           <!-- 2/4 -->
-              <div class="mdl-cell mdl-cell--6-col">
+              <div id="2_panel" class="mdl-cell mdl-cell--6-col score_panel">
                   <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
                       <div class="mdl-card__title">
                           <h2 class="mdl-card__title-text">Your ranking:</h2>
@@ -88,7 +87,7 @@
                   </div>
               </div>
           <!-- 1/4 -->
-              <div class="mdl-cell mdl-cell--6-col">
+              <div id="1_panel" class="mdl-cell mdl-cell--6-col score_panel">
                   <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
                       <div class="mdl-card__title">
                           <h2 class="mdl-card__title-text">Your ranking:</h2>
@@ -107,6 +106,7 @@
                       </div>
                   </div>
               </div>
+          </div>
       </div>
       </main>
   </div>
