--- a/public/choose.html
+++ b/public/choose.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="mdl-cell mdl-cell--1-col"></div>
                 <div class="mdl-cell mdl-cell--2-col">
-                    <button id="continuebutton" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                    <button id="continuebutton" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent some-color">
                         Continue
                     </button>
                 </div>
