--- a/public/show.html
+++ b/public/show.html
@@ -21,9 +21,13 @@
   </head>
 
   <body>
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-      <header class="mdl-layout__header">
+  <div class="mdl-layout mdl-js-layout mdl-layout__header--scroll">
+      <header class="mdl-layout__header other-header">
+        <br/>
+        <h1 style="text-align: center;
+        color: white;">@YOU</h1>
       </header>
+
       <main class="mdl-layout__content">
           <div class="page-content">
           <div class="mdl-grid" style="margin-top:7%;">
