--- a/public/show.html
+++ b/public/show.html
@@ -21,8 +21,8 @@
   </head>
 
   <body>
-  <div class="mdl-layout mdl-js-layout mdl-layout__header--scroll">
-      <header class="mdl-layout__header other-header">
+  <div class="mdl-layout mdl-js-layout">
+      <header class="mdl-layout__header mdl-layout__header--scroll other-header">
         <br/>
         <h1 style="text-align: center;
         color: white;">@YOU</h1>
