--- a/public/show.html
+++ b/public/show.html
@@ -25,16 +25,31 @@
       <header class="mdl-layout__header mdl-layout__header--scroll other-header">
         <br/>
         <h1 style="text-align: center;
-        color: white;">@YOU</h1>
+        color: white;">@YOU...</h1>
+        <div id="four" class="score_panel">
+          <h3 style="text-align: center;
+        color: white;">Life is full of rainbows and butterflies</h3>
+          <h4 style="text-align: center;
+        color: white;">XX% Confidence</h4>
+        </div>
+        <div id="three" class="score_panel"><h3 style="text-align: center;
+        color: white;">Just a few bumps in the road</h3><h4 style="text-align: center;
+      color: white;">XX% Confidence</h4></div>
+        <div id="two" class="score_panel"><h3 style="text-align: center;
+        color: white;">Shows small signs of depression</h3><h4 style="text-align: center;
+      color: white;">XX% Confidence</h4></div>
+        <div id="one" class="score_panel"><h3 style="text-align: center;
+        color: white;">Shows a deep depression</h3><h4 style="text-align: center;
+      color: white;">XX% Confidence</h4></div>
       </header>
 
       <main class="mdl-layout__content">
           <div class="page-content">
           <div class="mdl-grid" style="margin-top:7%;">
               <div class="mdl-cell mdl-cell--6-col">
-                  <div class="mdl-card mdl-shadow--2dp" style="max-width:100%;width:100%;">
-                      <div class="mdl-card__title">
-                          <h2 class="mdl-card__title-text">Negativity over time:</h2>
+                  <div class="mdl-card mdl-shadow--2dp" style="max-width:100%;width:100%;height: 493px;">
+                      <div class="mdl-card__title" style="border-bottom: 1px solid rgba(0,0,0,.1);">
+                          <h2 class="mdl-card__title-text">Trend</h2>
                       </div>
                       <div class="mdl-card__supporting-text">
                           <div id="container" style="height:400px;"></div>
@@ -43,39 +58,40 @@
               </div>
               <!-- 4/4 -->
               <div id="4_panel" class="mdl-cell mdl-cell--6-col score_panel">
-                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
+                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;height: 493px;">
                       <div class="mdl-card__title">
-                          <h2 class="mdl-card__title-text">Your ranking:</h2>
+                          <h2 class="mdl-card__title-text">Notes</h2>
                       </div>
-                  <div class="mdl-card__actions mdl-card--border">
+                  <div class="mdl-card__actions mdl-card--border" style="background-color: #EBEAEB;">
                       <div class="mdl-card__subtitle-text" style="width:50%;">
-                          <span><h1 style="padding-left:16px;">4/4</h1><h4 style="padding-left:16px;">You're literally made of rainbows!</h4></span>
+                          <span style="text-align:center;"><img height="400px" src="http://temp_thoughts_resize.s3.amazonaws.com/a2/0aa0960a2f3de8c75a99c9b7f8396f/pusheen.gif"/></span>
                       </div>
+                  </div>
                   </div>
               </div>
           <!-- 3/4 -->
               <div id="3_panel" class="mdl-cell mdl-cell--6-col score_panel">
-                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
+                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;height: 493px;">
                       <div class="mdl-card__title">
-                          <h2 class="mdl-card__title-text">Your ranking:</h2>
+                          <h2 class="mdl-card__title-text">Notes</h2>
                       </div>
                       <div class="mdl-card__actions mdl-card--border">
                           <div class="mdl-card__subtitle-text" style="width:50%;">
-                              <span><h1 style="padding-left:16px;">3/4</h1><h4 style="padding-left:16px;">You have a few rough moments but that's a part of life</h4></span>
-                              <p style="padding-left:16px;"> Here's a good place to start adding more optimism in your life:
+                              <span><h2 style="padding-left:16px;">You have a few rough moments but that's a part of life</h2></span>
+                              <4 style="padding-left:16px;"> Here's a good place to start adding more optimism in your life:
                                   <ul>
                                       <li><a href="https://chrome.google.com/webstore/detail/momentum/laookkfknpbbblfpciffpaejjkokdgca?hl=en" target="_blank">Momentum</a></li>
                                  </ul>
-                              </p>
+                              </4>
                           </div>
                       </div>
                   </div>
               </div>
           <!-- 2/4 -->
               <div id="2_panel" class="mdl-cell mdl-cell--6-col score_panel">
-                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
+                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;height: 493px;">
                       <div class="mdl-card__title">
-                          <h2 class="mdl-card__title-text">Your ranking:</h2>
+                          <h2 class="mdl-card__title-text">Notes</h2>
                       </div>
                       <div class="mdl-card__actions mdl-card--border">
                           <div class="mdl-card__subtitle-text" style="width:50%;">
@@ -92,9 +108,9 @@
               </div>
           <!-- 1/4 -->
               <div id="1_panel" class="mdl-cell mdl-cell--6-col score_panel">
-                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;">
+                  <div class="mdl-card mdl-shadow--2dp four" style="max-width:100%;width:100%;height: 493px;">
                       <div class="mdl-card__title">
-                          <h2 class="mdl-card__title-text">Your ranking:</h2>
+                          <h2 class="mdl-card__title-text">Notes</h2>
                       </div>
                       <div class="mdl-card__actions mdl-card--border">
                           <div class="mdl-card__subtitle-text" style="width:50%;">
