Adds username to top of page

--- a/public/show.html
+++ b/public/show.html
@@ -24,7 +24,7 @@
   <div class="mdl-layout mdl-js-layout">
       <header class="mdl-layout__header mdl-layout__header--scroll other-header">
         <br/>
-        <h1 style="text-align: center;
+        <h1 id="username" style="text-align: center;
         color: white;">@YOU...</h1>
         <div id="four" class="score_panel">
           <h3 style="text-align: center;
