--- a/public/show.html
+++ b/public/show.html
@@ -21,26 +21,29 @@
   </head>
 
   <body>
+
+  <input type="hidden" id="ceil" value=""/>
+  <input type="hidden" id="floor" value="" />
+
   <div class="mdl-layout mdl-js-layout">
       <header class="mdl-layout__header mdl-layout__header--scroll other-header">
         <br/>
         <h1 id="username" style="text-align: center;
         color: white;">@YOU...</h1>
-        <div id="four" class="score_panel">
-          <h3 style="text-align: center;
-        color: white;">Life is full of rainbows and butterflies</h3>
-          <h4 style="text-align: center;
-        color: white;">XX% Confidence</h4>
-        </div>
+        <div id="four" class="score_panel"><h3 style="text-align: center;
+          color: white;">Life is full of rainbows and butterflies<br></h3></div>
+
         <div id="three" class="score_panel"><h3 style="text-align: center;
-        color: white;">Just a few bumps in the road</h3><h4 style="text-align: center;
-      color: white;">XX% Confidence</h4></div>
+        color: white;">Just a few bumps in the road<br></h3></div>
+
         <div id="two" class="score_panel"><h3 style="text-align: center;
-        color: white;">Shows some warning signs</h3><h4 style="text-align: center;
-      color: white;">XX% Confidence</h4></div>
+        color: white;">Shows some warning signs<br></h3></div>
+
         <div id="one" class="score_panel"><h3 style="text-align: center;
-        color: white;">Shows many warning signs</h3><h4 style="text-align: center;
-      color: white;">XX% Confidence</h4></div>
+        color: white;">Shows many warning signs<br></h3></div>
+
+        <div class="conf"><h4 style ="text-align: center;
+        color: white;"></h4></div>
       </header>
 
       <main class="mdl-layout__content">
@@ -77,13 +80,11 @@
                       </div>
                       <div class="mdl-card__actions mdl-card--border">
                           <div class="mdl-card__subtitle-text">
-                              <img src="https://cdn0.iconfinder.com/data/icons/good-weather-1/96/weather_icons-17-128.png" style="position:absolute; left:50%; transform:translate(-50%,-50%); top:25%;"/>
                               <br/><br/><br/><br/>
                               <span><h3 style="padding-left:16px; text-align:center;">A few rough moments but that's a part of life. Keep up that positivity.</h3></span>
                               <h4 style="padding-left:16px;"> Here's a good place to start adding more optimism to life:
                                   <ul style="font-size:22pt;">
                                       <li><a href="https://chrome.google.com/webstore/detail/momentum/laookkfknpbbblfpciffpaejjkokdgca?hl=en" target="_blank">Momentum</a></li><br/>
-                                      <li><a href="https://chrome.google.com/webstore/detail/momentum/laookkfknpbbblfpciffpaejjkokdgca?hl=en" target="_blank">Momentum</a></li>
                                  </ul>
                               </h4>
                           </div>
@@ -98,7 +99,6 @@
                       </div>
                       <div class="mdl-card__actions mdl-card--border">
                           <div class="mdl-card__subtitle-text">
-                              <img src="https://cdn0.iconfinder.com/data/icons/good-weather-1/96/weather_icons-19-128.png" style="position:absolute; left:50%; transform:translate(-50%,-50%); top:25%;"/>
                               <br/><br/><br/><br/><br/><br/>
                               <span><h3 style="padding-left:16px; text-align:center;">We're sensing some negetivity. It's always a good time to add a little happiness</h3></span>
                               <h4 style="padding-left:16px;"> Here's some resources to inform you about the signs of depression:
@@ -119,7 +119,6 @@
                       </div>
                       <div class="mdl-card__actions mdl-card--border">
                           <div class="mdl-card__subtitle-text">
-                              <img src="https://cdn0.iconfinder.com/data/icons/good-weather-1/96/weather_icons-28-128.png" style="position:absolute; left:50%; transform:translate(-50%,-50%); top:25%;"/>
                               <br/><br/><br/><br/><br/>
                               <span><h3 style="padding-left:16px; text-align:center;">It's important to be there for those that need it the most. Help is within reach</h3></span>
                               <h4 style="padding-left:16px;"> We're really concerned here, check these out:
